--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,7 @@
 }
 
 .label {
-    position: relataive;
+    position: relative;
     color:#c90b0b;
     font-family: sans-serif;
     font-weight: bold;
