--- a/static/style.css
+++ b/static/style.css
@@ -31,8 +31,11 @@
     color: #fff;
 }
 
-.li {
-    font-family: sans-serif;
-    font-size: 20px;
-    margin-top: 10px;
-} 
+.backButton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    height: 20px;
+}
+
