--- a/static/style.css
+++ b/static/style.css
@@ -31,7 +31,7 @@
     color: #fff;
 }
 
-.backButton{
+.container__button{
     display: flex;
     justify-content: center;
     align-items: center;
